Fixed pane overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,7 +73,7 @@ table {
 }
 
 .removeBtn, .deselectAllBtn{
-    margin-left: 10px;
+    margin-left: 5px;
     background-color: red;
     border: 2px solid red;
     color: #FFFFFF;
@@ -118,7 +118,7 @@ select {
     float: right;
     border-radius: 12px;
     border: none;
-    padding: 8px 13px;
+    padding: 8px 8px;
     margin: 0;
     font-family: inherit;
     font-size: inherit;
@@ -130,7 +130,7 @@ select {
 }
 
 .pagination {
-    margin-left: 20px;
+    margin-left: 8px;
     float: right;
     display: inline-block;
 }
